Upgrade IntelliJ plugin; add `BlockCommentTree`.
- Rename "mapping" and similar to "equals" in multiple locations.
- Move `Token` to `Node` as `Type`; add types for trees.
- Move `Lexeme::is*` to `Node`.
- Add `Stream` and other utility methods to `Node` and `Tree`.
- Rename `Node.Type`s `*{BEGIN,END}` to `{L,R}{BRACE,BRACKET}`.
- Add `Node.Type.FILE` for `SourceUnit`.
- Invert `StructuredProperties.Option`s (`RETAIN -> SKIP`).
- Accept `CharSequence` instead of `String` as source.
  - Rewrite `Lexer::match`.
- Add `options` to `Parser::parse`.
- Make all block comments trees; introduce `BlockCommentTree` and rename
  `CommentLexeme` to `LineCommentLexeme`.
- Add field `element` to `SourceUnit`.
- Miscellaneous cleanup.
- Generalize `StringDelimiterLexeme` into `DelimiterLexeme` and `type`
  for it and `StringLexeme` in order to support block comment trees.
- Add abstract class `DelimitedTree` for `StringTree` and
 `BlockCommentTree`.
- Replace escaped `n` and `t` by newline and tab in
  `EscapedLexeme::stringValue`.

`Lexer`
-------
- Add `LexResult` and `Lexer::lex`.
- Move complete lexing from constructor to `lex`.
- Rename `advance` to `tryNext`.
- Rename `process` to `advance`; return `boolean` result of `tryNext`.
- Merge `whitespaceOrComment`, `comma` and `mapping` into `advance`.
- Replace `savePosition` by manual position tracking.
- Add `blockComment` for block comment tree lexing; rename `comment` to
  `lineComment`.
- Use `subSequence` instead of `buildString` and individual addition.

`Parser`
--------
- Update root tree's `first` if a child adopts its current child.
- Rename field `lexeme` to `node`; change the types of `node` and
  `lookahead` to `Node`.
- Do not allow `node` to become `null`; use new field `going` to
  indicate whether to continue parsing.
- Set `SourceUnit#element`.
- Replace `link*` by `begin` and `end` and complicated `Node` connection
  methods by field assignments.
- Keep raw `StringLexeme`s as such; do not turn them into trees.